# agent-invoice

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
:memory:/clients/: CLT-0E96C772.json  CLT-2EE8A784.json  CLT-374D4B24.json  CLT-5D23B2BA.json  CLT-CDAFFD98.json  CLT-E77B372C.json
:memory:/usage_events/: USE-088944AF.json  USE-08EDDE59.json  USE-0AF65D18.json  USE-0D4CA705.json  USE-112A0221.json  USE-139D7176.json  USE-15CE76C2.json  USE-16603AC5.json  USE-2167D528.json  USE-245F73AF.json  USE-29CBB96F.json  USE-3366D8CD.json  USE-337ABF5D.json  USE-38B27899.json  USE-3D3F9AD5.json  USE-404BBCB0.json  USE-4F2EF99A.json  USE-5291FC2E.json  USE-529CBEC2.json  USE-567F29E2.json  USE-5ACB4FA7.json  USE-5BCE2154.json  USE-5CDCB29E.json  USE-60103855.json  USE-6296828D.json  USE-663D3E47.json  USE-66C8CE44.json  USE-6753E5EA.json  USE-67B1F9A0.json  USE-6B6E1AE0.json  USE-71F346AD.json  USE-75FF02EE.json  USE-7BB729C9.json  USE-7E436196.json  USE-842C32EC.json  USE-85DF44C1.json  USE-883E312A.json  USE-8A1FF729.json  USE-92933A0C.json  USE-94E85F16.json  (+35 more)
src/agent_invoice/: __init__.py  api.py  cli.py  mcp_server.py  models.py  pdf.py  service.py  store.py
tests/: test_api_v060.py  test_api_v070.py  test_api_v2.py  test_cli.py  test_client_statements.py  test_credit_notes.py  test_invoice_search.py  test_mcp_server.py  test_mcp_v060.py  test_models.py  test_service.py  test_store.py  test_v060_features.py  test_v070_features.py  test_v080_usage.py  test_v090_analytics.py  test_v100_ratecards_subscriptions.py
