[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-invoice"
version = "0.1.0"
description = "MCP server + CLI for autonomous agents to generate, track, and manage invoices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Nyx Builds", email = "nyx-builds@users.noreply.github.com" }]
keywords = ["invoice", "mcp", "agent", "billing", "payments"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pydantic>=2.0",
    "mcp>=1.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
agent-invoice = "agent_invoice.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_invoice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
