[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-invoice"
version = "0.4.0"
description = "MCP server + CLI + REST API for autonomous agents to generate, track, and manage invoices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Nyx Builds", email = "nyx-builds@users.noreply.github.com" }]
keywords = ["invoice", "mcp", "agent", "billing", "payments", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pydantic>=2.0",
    "mcp>=1.0",
    "rich>=13.0",
    "click>=8.0",
    "reportlab>=4.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
agent-invoice = "agent_invoice.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_invoice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
